test_scores/negative_dimers/features/Q68CZ2.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q68CZ2.pkl.xz